# yt-podcast-transcriber

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.py  main_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  requirements.txt  yt-transcriber.py  yt_transcriber.py
